fixed navbar collapse

--- a/webapp/static/css/style.css
+++ b/webapp/static/css/style.css
@@ -26,7 +26,7 @@ body{
   padding-left: 20px !important;
   padding-right: 20px !important;
   text-decoration: none;
-  font-size: 25px;
+  font-size: 20px;
   /* font-style: oblique; */
   /* font-weight: 400; */
   /* font-variant: small-caps; */
